fix mn-grid-data-row height to avoid 1 pixel jump

--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -61,6 +61,7 @@ a.navbar-brand {
     border-bottom: none;
   }
   .mn-grid-data-row {
+    height: 45px;
     .input-sm {
       margin-top: -8px;
     }
